@@ -28,9 +28,13 @@ use warnings;
 
 use EBox::Gettext;
 use EBox::Global;
+use EBox::Types::Select;
 use EBox::Types::Text;
 use EBox::Types::Password;
 use EBox::Types::Host;
+use EBox::View::Customizer;
+
+use EBox::Asterisk;
 
 # Group: Public methods
 
@@ -58,6 +62,15 @@ sub new
 }
 
 
+sub providers
+{
+      my @providers;
+      push @providers, { 'value' => 'custom', printableValue => 'Custom' };
+      push @providers, { 'value' => 'ebox', printableValue => 'eBox VoIP Credit' };
+      return \@providers;
+}
+
+
 # Group: Private methods
 
 # Method: _table
@@ -71,12 +84,20 @@ sub _table
 
     my @tableHeader =
       (
+       new EBox::Types::Select(
+                                fieldName     => 'provider',
+                                printableName => __('Provider'),
+                                populate      => \&providers,
+                                editable      => 1,
+                               ),
        new EBox::Types::Text(
                                 fieldName     => 'name',
                                 printableName => __('Name'),
                                 size          => 12,
                                 unique        => 1,
                                 editable      => 1,
+                                defaultValue  => EBox::Asterisk->EBOX_VOIP_SRVNAME,
+                                help          => __('VoIP service provider name.'),
                                ),
        new EBox::Types::Text(
                                 fieldName     => 'username',
@@ -98,6 +119,7 @@ sub _table
                                 size          => 12,
                                 unique        => 1,
                                 editable      => 1,
+                                defaultValue  => EBox::Asterisk->EBOX_SIP_SERVER,
                                ),
        new EBox::Types::Text(
                                 fieldName     => 'incoming',
@@ -105,6 +127,7 @@ sub _table
                                 size          => 12,
                                 unique        => 1,
                                 editable      => 1,
+                                help          => __('Extension recipient of incoming calls through the provider.'),
                                ),
       );
 
@@ -124,6 +147,58 @@ sub _table
 
     return $dataTable;
 
+}
+
+
+# Method: viewCustomizer
+#
+#   Overrides <EBox::Model::DataTable::viewCustomizer> to implement
+#   a custom behaviour to enable and disable fields
+#   depending on the 'provider' value
+#
+#
+sub viewCustomizer
+{
+    my ($self) = @_;
+
+    my $customizer = new EBox::View::Customizer();
+    $customizer->setModel($self);
+
+    # Be careful: password should be always the first item if there are more
+    # as we remove it using shift later
+    my @enableEbox= ('incoming', 'password', 'username');
+    my @disableEbox= ('server', 'name');
+    my @enableCustom = ('incoming', 'server', 'password', 'username', 'name');
+    my @disableCustom = ();
+
+    $customizer->setOnChangeActions(
+            { provider =>
+                {
+                  'ebox'    => {
+                        enable  => \@enableEbox,
+                        disable => \@disableEbox,
+                    },
+                  'custom' => {
+                        enable  => \@enableCustom,
+                        disable => \@disableCustom,
+                    },
+                }
+            });
+    $customizer->setPermanentMessage(_message());
+    return $customizer;
+}
+
+
+sub _message
+{
+    my $voipmsg =  __x(
+        'eBox VoIP Credit: make low-cost VoIP calls to mobile phones and ' .
+        'landlines directly with eBox. Purchase the VoIP credit you need directly ' .
+        'at the {ohref}eBox on-line store{chref}! ',
+         ohref => '<a href="http://store.ebox-technologies.com/">',
+         chref => '</a>'
+    );
+    return $voipmsg;
 }
 
 1;
