@@ -57,7 +57,7 @@ secret=<% $password %>
 host=<% $server %>
 fromuser=<% $username %>
 context=default
-allow=alaw,ulaw,gsm,ilbc
+allow=alaw,ulaw,gsm
 trustrpid = yes
 sendrpid = yes
 canreinvite = no
