@@ -1,3 +1,6 @@
+HEAD
+	+ UI change for eBox VoIP
+	+ Disable ilbc codec for external provider
 1.3.16
 	+ Bug fix: create /var/run/asterisk in upstart script
 1.3.15
